--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="hero-slider swiper myswiper">
           <div class="hero-wrapper swiper-wrapper">
             <div class="hero-slide swiper-slide">
-              <div class="hero-slide__inner" style="background-image: url(../../images/hero-bg.webp);
+              <div class="hero-slide__inner" style="background-image: url(./images/hero-bg.webp);
               background-repeat: no-repeat;
               background-size: contain;
               width: 100%;
@@ -117,7 +117,7 @@
               </div>
             </div>
             <div class="hero-slide swiper-slide">
-              <div class="hero-slide__inner "  style="background-image: url(../../images/hero-bg.webp);
+              <div class="hero-slide__inner "  style="background-image: url(./images/hero-bg.webp);
               background-repeat: no-repeat;
               background-size: contain;
               width: 100%;
@@ -137,7 +137,7 @@
               </div>
             </div>
             <div class="hero-slide swiper-slide">
-              <div class="hero-slide__inner "  style="background-image: url(../../images/hero-bg.webp);
+              <div class="hero-slide__inner "  style="background-image: url(./images/hero-bg.webp);
               background-repeat: no-repeat;
               background-size: contain;
               width: 100%;
@@ -157,7 +157,7 @@
               </div>
             </div>
             <div class="hero-slide swiper-slide">
-              <div class="hero-slide__inner "  style="background-image: url(../../images/hero-bg.webp);
+              <div class="hero-slide__inner "  style="background-image: url(./images/hero-bg.webp);
               background-repeat: no-repeat;
               background-size: contain;
               width: 100%;
@@ -917,5 +917,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 
 </html>
