--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="We provide the best services out there">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" > 
   <link rel="stylesheet" href="./styles/styles.css">
-  <title>Start</title>
+  <title>Dentist</title>
 </head>
 
 <body>
@@ -920,3 +920,4 @@
 
 
 </html>
+
